--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     width: 100%;
     height: 100vh;
     background-color: black;
-    background-image: url(images/LC_012.png);
+    background-image: url(images/LC_012.jpg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top;
